# plotsaur

./: .gitignore  Cargo.toml  README.md  deps.ts  mod.ts
examples/: bar.ts  canvas.ts  chart.ts  example.ts  histogram.ts
lib/: bindings.ts  chart.ts  types.ts  utils.ts  window.ts
lib/graphs/: chart.ts
lib/plots/: chart.ts
src/: chart.rs  chart_type.rs  lib.rs  main.rs  plot.rs  types.rs  window.rs
src/elements/: mod.rs  shapes.rs
src/plots/: chart.rs  mod.rs  series.rs
src/plots.rs/: chart.rs
src/series/: histogram.rs  line.rs  mod.rs
