[package]
edition = "2021"
name = "plotsaur"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
piston_window = "0.120.0"
plotters = "^0.3.1"
plotters-piston = {git = "https://github.com/plotters-rs/plotters-piston"}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
